# parse_terminal_bot

./: AGENTS.md  Cargo.toml  config.toml  run.sh
frontend/: app.js  index.html  pane_manager.js  semantic_renderer.js  style.css  virtual_list.js  ws_client.js
src/: broadcaster.rs  config.rs  main.rs  types.rs
src/parser/: mod.rs  performer.rs  semantic.rs
src/registry/: mod.rs  pane.rs
src/server/: api.rs  mod.rs  trades.rs  ws.rs
src/tmux/: discovery.rs  mod.rs  pipe_reader.rs
