[package]
name = "parse_terminal_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parse_terminal_bot"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1", features = ["full"] }
axum           = { version = "0.7", features = ["ws", "json"] }
tower-http     = { version = "0.5", features = ["cors", "fs"] }
vte            = "0.13"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
chrono         = { version = "0.4", features = ["serde"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid           = { version = "1", features = ["v4"] }
parking_lot    = "0.12"
bytes          = "1"
futures        = "0.3"
regex          = "1"
once_cell      = "1"
anyhow         = "1"

[profile.release]
opt-level = 3
lto = true
